Add silent parameter

--- a/hist_matching.ipynb
+++ b/hist_matching.ipynb
@@ -65,6 +65,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sprint(s, silent=False):\n",
+    "    \"\"\"\n",
+    "    A silenceable wrapper around print.\n",
+    "    @param {str} s Text to print\n",
+    "    @param {bool} silent If true, nothing will print. If false, text will be printed.\n",
+    "    \"\"\"\n",
+    "    if not silent:\n",
+    "        print(s)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def histogram_match_photos(photo_paths, write=True, save_dir=None, save_suffix=\"_match\", reference_index=0, dtype=None):\n",
+    "def histogram_match_photos(photo_paths, write=True, save_dir=None, save_suffix=\"_match\", reference_index=0, dtype=None, silent=False):\n",
     "    \"\"\"\n",
     "    Histogram match a set of photos, using one of the photos as a reference. Return the matched photos\n",
     "    and optionally write to files.\n",
@@ -90,7 +106,7 @@
     "    histogram matching.\n",
     "    @param {numpy.dtype, default None} dtype The data type to cast values of the matched photo to.\n",
     "    If none is provided, the data type of the input reference image will be used.\n",
-    "    @return\n",
+    "    @return {list} List of np.ndarrays representing histogram matched photos\n",
     "    \"\"\"\n",
     "    photos = [io.imread(path) for path in photo_paths]\n",
     "    reference = photos[reference_index]\n",
@@ -101,9 +117,8 @@
     "    matched_photos = []\n",
     "    \n",
     "    for i, photo in enumerate(photos):\n",
-    "        print(f\"Matching photo {i + 1} of {len(photos)}...\")\n",
+    "        sprint(f\"Matching photo {i + 1} of {len(photos)}...\", silent)\n",
     "        \n",
-    "        # Histogram match and cast pixels to original data type\n",
     "        matched = match_histograms(photo, reference).astype(dtype)\n",
     "        matched_photos.append(matched)\n",
     "        \n",
@@ -111,7 +126,7 @@
     "            in_path = photo_paths[i]\n",
     "            out_path = os.path.join(save_dir, os.path.basename(in_path)) if save_dir else in_path\n",
     "            out_path = add_suffix(out_path, save_suffix)\n",
-    "            print(f\"Writing matched photo to {out_path}...\")\n",
+    "            sprint(f\"Writing matched photo to {out_path}...\", silent)\n",
     "            io.imsave(out_path, matched)\n",
     "    \n",
     "    return matched_photos"
@@ -126,14 +141,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matching photo 1 of 18...\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-74-53d9f48fbbfd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mphoto_paths\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist_paths\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg_dir\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalid_extensions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mmatched_photos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhistogram_match_photos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mphoto_paths\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwrite\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msave_dir\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msave_dir\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msave_suffix\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"_matched\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msilent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-73-878b192503f9>\u001b[0m in \u001b[0;36mhistogram_match_photos\u001b[1;34m(photo_paths, write, save_dir, save_suffix, reference_index, dtype, silent)\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[0msprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Matching photo {i + 1} of {len(photos)}...\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msilent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m         \u001b[0mmatched\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmatch_histograms\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mphoto\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreference\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m         \u001b[0mmatched_photos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatched\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\skimage\\exposure\\histogram_matching.py\u001b[0m in \u001b[0;36mmatch_histograms\u001b[1;34m(image, reference, multichannel)\u001b[0m\n\u001b[0;32m     66\u001b[0m             \u001b[0mmatched\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m...\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mchannel\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmatched_channel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m         \u001b[0mmatched\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_match_cumulative_cdf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreference\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmatched\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\skimage\\exposure\\histogram_matching.py\u001b[0m in \u001b[0;36m_match_cumulative_cdf\u001b[1;34m(source, template)\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mits\u001b[0m \u001b[0mvalues\u001b[0m \u001b[0mmatches\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mcumulative\u001b[0m \u001b[0mdensity\u001b[0m \u001b[0mfunction\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mtemplate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \"\"\"\n\u001b[1;32m----> 9\u001b[1;33m     src_values, src_unique_indices, src_counts = np.unique(source.ravel(),\n\u001b[0m\u001b[0;32m     10\u001b[0m                                                            \u001b[0mreturn_inverse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m                                                            return_counts=True)\n",
+      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36munique\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\numpy\\lib\\arraysetops.py\u001b[0m in \u001b[0;36munique\u001b[1;34m(ar, return_index, return_inverse, return_counts, axis)\u001b[0m\n\u001b[0;32m    261\u001b[0m     \u001b[0mar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masanyarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mar\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    262\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0maxis\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 263\u001b[1;33m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_unique1d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mar\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_inverse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_counts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    264\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0m_unpack_tuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mret\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    265\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\numpy\\lib\\arraysetops.py\u001b[0m in \u001b[0;36m_unique1d\u001b[1;34m(ar, return_index, return_inverse, return_counts)\u001b[0m\n\u001b[0;32m    306\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    307\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0moptional_indices\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 308\u001b[1;33m         \u001b[0mperm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mar\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margsort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkind\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'mergesort'\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mreturn_index\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;34m'quicksort'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    309\u001b[0m         \u001b[0maux\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mar\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mperm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    310\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -143,7 +168,7 @@
     "valid_extensions = (\".tif\")\n",
     "photo_paths = list_paths(img_dir, valid_extensions)\n",
     "\n",
-    "matched_photos = histogram_match_photos(photo_paths, write=True, save_dir=save_dir, save_suffix=\"_matched\")"
+    "matched_photos = histogram_match_photos(photo_paths, write=True, save_dir=save_dir, save_suffix=\"_matched\", silent=True)"
    ]
   }
  ],
