Add sample data, migrate from PIL to cv2

--- a/photo_specs.ipynb
+++ b/photo_specs.ipynb
@@ -10,21 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
     "import os\n",
-    "from PIL import Image\n",
-    "import statistics\n",
-    "\n",
-    "# Override PIL max pixel limit\n",
-    "Image.MAX_IMAGE_PIXELS = None"
+    "import statistics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +47,8 @@
     "    if all((dpi, photo_size)):\n",
     "        raise Exception(\"Provide only dpi or photo_size argument, not both.\")\n",
     "    \n",
-    "    img = Image.open(path)\n",
-    "    l, w = img.size\n",
+    "    img = cv2.imread(path)\n",
+    "    l, w, _ = img.shape\n",
     "    \n",
     "    if dpi:\n",
     "        calculating = \"Photo size\"\n",
@@ -116,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -124,21 +121,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        Image resolution (px): 18859 (L) x 18862 (W)\n",
+      "        Image resolution (px): 1886 (L) x 1885 (W)\n",
       "        Calculated: DPI\n",
       "\n",
-      "        DPI: 2138.645982142857\n",
-      "        DPI mismatch: 0.02%\n",
+      "        DPI: 213.80223214285712\n",
+      "        DPI mismatch: 0.05%\n",
       "        Photo length (mm): 224\n",
       "        Photo width (mm): 224\n",
-      "        Pixel length (mm): 0.011877618113367622\n",
-      "        Pixel width (mm): 0.011875728978899375\n",
+      "        Pixel length (mm): 0.11876988335100742\n",
+      "        Pixel width (mm): 0.11883289124668435\n",
       "        \n"
      ]
     }
    ],
    "source": [
-    "photo_path = os.path.join(\"E:\", \"ORISE\", \"Projects\", \"other\", \"naficy_photogrammetry\", \"DWW 1965-69 Six Mile GYE\", \"DWW_3FF_117.tif\")\n",
+    "photo_path = os.path.join(\"data\", \"DWW_3FF_117.tif\")\n",
     "\n",
     "pixel_size, dpi, _ = calculate_photo_specs(photo_path, photo_size=(224, 224), verbose=True)"
    ]
