Move helper functions into separate script

--- a/hist_matching.ipynb
+++ b/hist_matching.ipynb
@@ -10,74 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "from skimage import io\n",
-    "from skimage.exposure import match_histograms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Helper functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def list_paths(file_dir, valid_extensions):\n",
-    "    \"\"\"\n",
-    "    Return a list of paths to files in a directory with valid extensions\n",
-    "    @param {str} file_dir The directory to find files in\n",
-    "    @param {list} valid_extensions All valid extensions, such as \".tif\"\n",
-    "    @return {list} Path to all files with valid extensions in the file directory\n",
-    "    \"\"\"\n",
-    "    return [os.path.join(file_dir, file) for file in os.listdir(file_dir) if any(file.endswith(ext) for ext in valid_extensions)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_suffix(file_path, suffix):\n",
-    "    \"\"\"\n",
-    "    Insert a suffix into the file name of a path.\n",
-    "    @param {str} file_path A relative or absolute path to the file, including the file name\n",
-    "    @param {str} suffix A set of characters to append to the file name as a suffix\n",
-    "    @return {str} A relative or absolute path to the file with the suffix appended to the file name\n",
-    "    \"\"\"\n",
-    "    path, basename = os.path.split(file_path)\n",
-    "    name, ext = os.path.splitext(basename)\n",
-    "    name_suffix = f\"{name}{suffix}{ext}\"\n",
-    "    \n",
-    "    full_path = os.path.join(path, name_suffix)\n",
-    "    return full_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sprint(s, silent=False):\n",
-    "    \"\"\"\n",
-    "    A silenceable wrapper around print.\n",
-    "    @param {str} s Text to print\n",
-    "    @param {bool} silent If true, nothing will print. If false, text will be printed.\n",
-    "    \"\"\"\n",
-    "    if not silent:\n",
-    "        print(s)"
+    "from skimage.exposure import match_histograms\n",
+    "\n",
+    "from utils import sprint, list_paths, add_suffix"
    ]
   },
   {
@@ -89,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
