Split calculation algorithms into separate functions

--- a/photo_specs.ipynb
+++ b/photo_specs.ipynb
@@ -10,22 +10,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import os\n",
-    "import statistics"
+    "import statistics\n",
+    "\n",
+    "from utils import sprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_photo_specs(path, dpi=None, photo_size=None, dpi_tolerance=0.01, verbose=False):\n",
+    "def calculate_dpi(photo_size, img_size):\n",
+    "    \"\"\"\n",
+    "    Calculate dots per inch (DPI) given a physical photo size in millimeters and a digital image size\n",
+    "    in pixels.\n",
+    "    @param {tuple} photo_size Physical photo size (length, width) in millimeters.\n",
+    "    @param {tuple} img_size Digital image size (length, width) in pixels\n",
+    "    @return {float} Calculated DPI of the image.\n",
+    "    \"\"\"\n",
+    "    # Convert photo size from millimeters to inches\n",
+    "    l_in = photo_size[0] / 25.4\n",
+    "    w_in = photo_size[1] / 25.4\n",
+    "\n",
+    "    l_dpi = img_size[0] / l_in\n",
+    "    w_dpi = img_size[1] / w_in\n",
+    "\n",
+    "    return statistics.mean((l_dpi, w_dpi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_photo_size(dpi, img_size):\n",
+    "    \"\"\"\n",
+    "    Calculate physical photo size in millimeters given dots per inch (DPI) and digital image size\n",
+    "    in pixels.\n",
+    "    @param {int} dpi Dots per inch that the photo was scanned at.\n",
+    "    @param {tuple} img_size Digital image size (length, width) in pixels\n",
+    "    @return {tuple} Calculated photo size (length, width).\n",
+    "    \"\"\"\n",
+    "    # Calculate photo size in inches\n",
+    "    l_in = img_size[0] / dpi\n",
+    "    w_in = img_size[1] / dpi\n",
+    "        \n",
+    "    # Convert photo size to millimeters\n",
+    "    l_mm = l_in * 25.4\n",
+    "    w_mm = w_in * 25.4\n",
+    "        \n",
+    "    return (l_mm, w_mm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_pixel_size(photo_size, img_size):\n",
+    "    \"\"\"\n",
+    "    Calculate pixel size in millimiters given physical photo size in millimeters and digital image size\n",
+    "    in pixels.\n",
+    "    @param {tuple} photo_size Physical photo size (length, width) in millimeters.\n",
+    "    @param {tuple} img_size Digital image size (length, width) in pixels.\n",
+    "    @return {tuple} Calculated ixel size (length, width).\n",
+    "    \"\"\"\n",
+    "    l_pixel = photo_size[0] / img_size[0]\n",
+    "    w_pixel = photo_size[1] / img_size[1]\n",
+    "    \n",
+    "    return (l_pixel, w_pixel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_photo_specs(path, dpi=None, photo_size=None, silent=True):\n",
     "    \"\"\"\n",
     "    Pass a photo path and either DPI or photo size to calculate \n",
     "    pixel size and the other parameter. \n",
@@ -37,11 +108,6 @@
     "    @param {tuple of ints} photo_size The physical size of the scanned \n",
     "    image in millimeters format (length, width). If photo size is not\n",
     "    provided, it will be calculated based on DPI.\n",
-    "    @param {float, default 0.5} dpi_tolerance: The maximum proportional\n",
-    "    difference between calculated length and width DPI. If the provided photo\n",
-    "    size is out of proportion to the image size in pixels beyond this threshold,\n",
-    "    (for example, if length and width were switched in a rectangular image), an\n",
-    "    error will be raised.\n",
     "    @return {tuple} Photo specs in the format ((pixel length in mm, pixel width in mm), dpi, (length in mm, width in mm))\n",
     "    \"\"\"\n",
     "    if all((dpi, photo_size)):\n",
@@ -49,57 +115,30 @@
     "    \n",
     "    img = cv2.imread(path)\n",
     "    l, w, _ = img.shape\n",
+    "    img_size = (l, w)\n",
     "    \n",
     "    if dpi:\n",
     "        calculating = \"Photo size\"\n",
-    "        l_in = l / dpi\n",
-    "        w_in = w / dpi\n",
-    "        \n",
-    "        l_mm = l_in * 25.4\n",
-    "        w_mm = w_in * 25.4\n",
-    "        \n",
-    "        photo_size = (l_mm, w_mm)\n",
+    "        photo_size = calculate_photo_size(dpi, img_size)\n",
     "    \n",
     "    elif photo_size:\n",
     "        calculating = \"DPI\"\n",
-    "        l_mm = photo_size[0]\n",
-    "        w_mm = photo_size[1]\n",
-    "        \n",
-    "        l_in = l_mm / 25.4\n",
-    "        w_in = w_mm / 25.4\n",
-    "        \n",
-    "        l_dpi = l / l_in\n",
-    "        w_dpi = w / w_in\n",
-    "        \n",
-    "        dpi_mismatch = abs(l_dpi / w_dpi - 1)\n",
-    "        dpi_mismatch_print = str(round(dpi_mismatch * 100, 2))\n",
-    "        \n",
-    "        if dpi_mismatch > dpi_tolerance:\n",
-    "            raise Warning(f\"\"\"The provided photo_size proportion does not match \n",
-    "            the image resolution ({dpi_mismatch_print}% mismatch). Confirm that \n",
-    "            photo_size is accurate. To supress this error, raise the dpi_tolerance\n",
-    "            beyond the current mismatch level.\"\"\")\n",
-    "        \n",
-    "        dpi = statistics.mean((l_dpi, w_dpi))\n",
+    "        dpi = calculate_dpi(photo_size, img_size)\n",
     "    \n",
     "    else:\n",
     "        raise Exception(\"Provide either dpi or photo_size argument.\")\n",
     "        \n",
-    "    l_pixel = l_mm / l\n",
-    "    w_pixel = w_mm / w\n",
-    "    pixel_size = (l_pixel, w_pixel)\n",
+    "    pixel_size = calculate_pixel_size(photo_size, img_size)\n",
     "    \n",
-    "    if verbose:\n",
-    "        print(f\"\"\"\n",
+    "    sprint(f\"\"\"\n",
     "        Image resolution (px): {l} (L) x {w} (W)\n",
     "        Calculated: {calculating}\\n\n",
     "        DPI: {dpi}\n",
-    "        DPI mismatch: {dpi_mismatch_print + \"%\" if calculating == \"DPI\" else \"NA\"}\n",
     "        Photo length (mm): {photo_size[1]}\n",
     "        Photo width (mm): {photo_size[0]}\n",
-    "        Pixel length (mm): {l_pixel}\n",
-    "        Pixel width (mm): {w_pixel}\n",
-    "        \"\"\")\n",
+    "        Pixel length (mm): {pixel_size[0]}\n",
+    "        Pixel width (mm): {pixel_size[1]}\n",
+    "        \"\"\", silent)\n",
     "    \n",
     "    return(pixel_size, dpi, photo_size)"
    ]
@@ -125,7 +164,6 @@
       "        Calculated: DPI\n",
       "\n",
       "        DPI: 213.80223214285712\n",
-      "        DPI mismatch: 0.05%\n",
       "        Photo length (mm): 224\n",
       "        Photo width (mm): 224\n",
       "        Pixel length (mm): 0.11876988335100742\n",
@@ -137,7 +175,7 @@
    "source": [
     "photo_path = os.path.join(\"data\", \"DWW_3FF_117.tif\")\n",
     "\n",
-    "pixel_size, dpi, _ = calculate_photo_specs(photo_path, photo_size=(224, 224), verbose=True)"
+    "pixel_size, dpi, _ = calculate_photo_specs(photo_path, photo_size=(224, 224), silent=False)"
    ]
   }
  ],
