--- a/example.ipynb
+++ b/example.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -61,11 +61,25 @@
     "photo = Photo(photo_path, photo_size=(224, 224))\n",
     "\n",
     "# Summarize photo attributes\n",
-    "print(myphoto)\n",
+    "print(photo)\n",
     "\n",
     "# Preview the photo\n",
-    "myphoto.preview(size=(4, 4))"
+    "photo.preview(size=(4, 4))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fiducials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
