--- a/scripts/hist_matching.ipynb
+++ b/scripts/hist_matching.ipynb
@@ -19,7 +19,7 @@
     "from skimage import io\n",
     "from skimage.exposure import match_histograms\n",
     "\n",
-    "from utils import sprint, list_paths, add_suffix"
+    "from scripts.utils import sprint, list_paths, add_suffix"
    ]
   },
   {
