--- a/scripts/hist_matching.ipynb
+++ b/scripts/hist_matching.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from skimage import io\n",
     "from skimage.exposure import match_histograms\n",
     "\n",
-    "from scripts.utils import sprint, list_paths, add_suffix"
+    "from utils import sprint, list_paths, add_suffix"
    ]
   },
   {
